Fix issue with background not displaying on iPhone

--- a/css/app.css
+++ b/css/app.css
@@ -24,7 +24,6 @@ body {
 
 .coverBackground {
   background-size: cover;
-  background-attachment: fixed;
   height:100%;
   width:100%;
   position: absolute;
